--- a/app/views/shared/_monthly_generation_summary.html.haml
+++ b/app/views/shared/_monthly_generation_summary.html.haml
@@ -1,5 +1,5 @@
 %turbo-frame#monthly_generation_summary   
-  .bg-body-secondary.p-3.rounded.mb-3.d-flex.flex-wrap.justify-content-center.gap-4
+  .bg-body-secondary.p-3.rounded-3.mb-3.d-flex.flex-wrap.justify-content-center.gap-4
     .d-flex.align-items-center
       %i.bi-calendar.me-2.mt-1
       %strong.me-1 Year:
