--- a/app/views/communities/demographics/population/_population_age_sex_datatable.html.haml
+++ b/app/views/communities/demographics/population/_population_age_sex_datatable.html.haml
@@ -1,4 +1,4 @@
-%div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc'], scroll_x: true} } }
+%div{ data: { controller: 'datatables', datatables: { order_value: [0, 'desc'], scroll_x: true} } }
   %table.table.table-sm.table-stripped.border
     %thead
       %tr
