Clean up show methods, rubocop

--- a/app/views/communities/_sticky_toolbar.html.haml
+++ b/app/views/communities/_sticky_toolbar.html.haml
@@ -1,5 +1,5 @@
 - tabs = [ |
-  { label: "General", path: general_community_path(@community), visible: @community.show_general_tab? }, |
+  { label: "General", path: general_community_path(@community), visible: true }, |
   { label: "Power Generation", path: power_generation_community_path(@community), visible: @community.show_power_generation_tab? }, |
   { label: "Rates & Sales", path: electric_rates_sales_community_path(@community), visible: @community.show_sales_rates_tab? }, |
   { label: "Fuel", path: fuel_community_path(@community), visible: @community.show_fuel_tab? }, |
