--- a/app/views/communities/demographics/_employment.html.haml
+++ b/app/views/communities/demographics/_employment.html.haml
@@ -1,7 +1,7 @@
 - parent_tab = 'demographics'
 
 -# --- Section Body ---
-.section-body.m-5.mt-3
+.section-body.m-1.m-md-2.m-lg-3.mt-3
   .p-4.border.rounded-3.bg-white.shadow-sm.mb-4
     -# Employment Status (Full Width)
     - if @community.show_employment?
