--- a/app/views/communities/power_generation/_generation.html.haml
+++ b/app/views/communities/power_generation/_generation.html.haml
@@ -2,7 +2,7 @@
 - show_monthly_gen = @community.show_monthly_generation?
 - show_yearly_gen = @community.show_yearly_generation?
 
-.section-body.m-5.mt-3
+.section-body.m-1.m-md-2.m-lg-3.mt-3
   - if show_monthly_gen && show_yearly_gen
     .mb-4
       %ul.nav.nav-pills.bg-white.p-1.rounded-3.border.d-inline-flex
