--- a/app/views/communities/fuel/_bulk_fuel_facilities.html.haml
+++ b/app/views/communities/fuel/_bulk_fuel_facilities.html.haml
@@ -8,7 +8,7 @@
     } |
   ] |
 
-.section-body.m-5.mt-3
+.section-body.m-1.m-md-2.m-lg-3.mt-3
   .row.mb-4.g-4.d-flex.align-items-stretch
     -# Map Buttons
     .col-12.col-lg-4.d-flex
