--- a/app/views/communities/general/_legislative_districts.html.haml
+++ b/app/views/communities/general/_legislative_districts.html.haml
@@ -14,7 +14,7 @@
           } |
         ] |
 
-.section-body.m-5.mt-3
+.section-body.m-1.m-md-2.m-lg-3.mt-3
   / Map Buttons
   .mb-4
     = render 'shared/map_buttons', buttons: legislative_buttons
