--- a/app/views/communities/general/_transportation.html.haml
+++ b/app/views/communities/general/_transportation.html.haml
@@ -1,4 +1,4 @@
-.section-body.m-5.mt-3
+.section-body.m-1.m-md-2.m-lg-3.mt-3
   .mb-4
     = render 'shared/icon_status_grid', 
       title: 'Transportation Methods',
