--- a/app/views/communities/income/_income.html.haml
+++ b/app/views/communities/income/_income.html.haml
@@ -1,6 +1,6 @@
 - parent_tab = "income"
 
-.section-body.m-5.mt-3
+.section-body.m-1.m-md-2.m-lg-3.mt-3
   .row
     .col-12
       -# Main Data Card
