clean up some styling

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -222,7 +222,7 @@
 }
 
 // Target links coming from yml static content (markdown)
-.text-muted a {
+#data-creation-process .text-muted a {
   text-decoration: none;
   font-weight: 500;
 }
