--- a/app/views/communities/power_generation/utilities/_service_area_card.html.haml
+++ b/app/views/communities/power_generation/utilities/_service_area_card.html.haml
@@ -45,7 +45,7 @@
         %span.text-secondary None
       - else
         %i.bi.bi-diagram-3.text-primary.me-1
-        = link_to community.grid.name.titleize, grid_path(community.grid), class: "fw-bold text-decoration-none"
+        = link_to community.grid.name.titleize, grid_path(community.grid), class: "fw-bold"
 
     .col-md-6.mb-3
       .d-flex.align-items-center.mb-1
