--- a/app/views/shared/_section_header.html.haml
+++ b/app/views/shared/_section_header.html.haml
@@ -1,9 +1,9 @@
 -# locals: (icon:, title:, description:, anchor: nil)
 
-.section-title-bar.bg-body-secondary.border-start.border-primary.border-5.p-3.mb-4
+.section-title-bar.bg-body-secondary.border-start.border-primary.border-5.p-3.mb-1.mb-md-3.mb-lg-4
   .d-flex.align-items-center
     -# Icon Container
-    .bg-primary-subtle.rounded-circle.p-3.me-3.d-inline-flex.align-items-center.justify-content-center{ style: "flex-shrink: 0;" }
+    .bg-primary-subtle.rounded-circle.p-2.p-md-3.me-3.d-inline-flex.align-items-center.justify-content-center{ style: "flex-shrink: 0;" }
       %i.fs-3.text-primary.lh-1{ class: "bi bi-#{icon}" }
 
     -# Text Content
